# advent2024

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  readme.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Deps.cmake  toolchain-gcc.cmake
include/advent24/: common.hpp  day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  main.cpp
